# ai-invention-395f4e-education-inequality-and-democratic-eros

./: README.md
paper_latex/: paper.tex
paper_latex/workspace/: .terminal_claude_agent_struct_out.json  paper.aux  paper.bbl  paper.blg  paper.out  paper.toc  references.bib  render_pages.py
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
round-1/dataset-1/src/: .terminal_claude_agent_struct_out.json  build_panel.py  data.py  data_audit.json  data_out.json  full_data_out.json  mini_data_out.json  preview_full_data_out.json  pyproject.toml
round-1/dataset-2/: README.md
round-1/dataset-2/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
round-1/dataset-2/src/: .terminal_claude_agent_struct_out.json  build_dataset.py  data.py  data_out.json  download_datasets.py  full_data_out.json  preview_data_out.json  pyproject.toml
round-1/dataset-2/src/logs/: build_stdout.txt  data_stdout.txt
round-1/research-2/: README.md
round-1/research-2/demo/: research_demo.md
round-1/research-2/src/: .terminal_claude_agent_struct_out.json  research_out.json
round-1/research-3/: README.md
round-1/research-3/demo/: research_demo.md
round-1/research-3/src/: .terminal_claude_agent_struct_out.json  research_out.json
round-2/dataset-1/: README.md
round-2/dataset-1/demo/: data_code_demo.ipynb  demo_result.json
round-2/dataset-1/src/: .terminal_claude_agent_struct_out.json  build_panel.py  data.py  data_out.json  download_datasets.py  mini_full_data_out.json  preview_data_out.json  pyproject.toml
round-2/dataset-1/src/data/output/: panel_education_trap.csv
round-2/dataset-1/src/gen_art_dataset_1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
round-2/dataset-2/: README.md
round-2/dataset-2/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
round-2/dataset-2/src/: .aii_cost_ledger.jsonl  .terminal_claude_agent_struct_out.json  coverage_report.txt  data.py  data_out.json  full_data_out.json  full_full_data_out.json  mini_full_data_out.json  preview_full_data_out.json  pyproject.toml  select_best3.py
round-2/experiment-1/: README.md
round-2/experiment-1/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
round-2/experiment-1/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-2/experiment-2/: README.md
round-2/experiment-2/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
round-2/experiment-2/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  method_out.json  method_out_mini.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-2/research-1/: README.md
round-2/research-1/src/: research_out.json  research_report.md
round-3/dataset-1/: README.md
round-3/dataset-1/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
round-3/dataset-1/src/: .terminal_claude_agent_struct_out.json  build_panel.py  data.py  data_audit.json  full_data_out.json  mini_data_out.json  preview_data_out.json  pyproject.toml
round-3/dataset-1/src/workspace/processed/: aspire.parquet  ilo.parquet  panel.parquet  swiid.parquet  undp_mys.parquet  vdem_owid.parquet  wb.parquet
round-3/dataset-1/src/workspace/raw/ilo/: SDG_0131_SEX_T_TOTAL.csv
round-3/dataset-1/src/workspace/raw/vdem/: vdem_harvard.csv
round-3/dataset-1/src/workspace/raw/wb/: educ_tertiary_long.csv  educ_tertiary_wide.csv  gdppc_ppp_long.csv  gdppc_ppp_wide.csv
round-3/experiment-1/: README.md
round-3/experiment-1/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
round-3/experiment-1/src/: .terminal_claude_agent_struct_out.json  full_full_method_out.json  full_method_out.json  method.py  mini_full_method_out.json  mini_method_out.json  preview_full_method_out.json  preview_method_out.json  pyproject.toml
round-3/experiment-2/: README.md
round-3/experiment-2/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
round-3/experiment-2/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-3/research-1/: README.md
round-3/research-1/src/: .terminal_claude_agent_struct_out.json  research_out.json  (+1 more)
round-4/dataset-1/: README.md
round-4/dataset-1/src/: .terminal_claude_agent_struct_out.json  build_dataset.py  data.py  data_audit.json  fetch_wb.py  full_data_out.json  mini_data_out.json  pyproject.toml
round-4/evaluation-1/: README.md
round-4/experiment-1/: README.md
round-4/experiment-1/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-5/evaluation-1/: README.md
round-5/experiment-1/: README.md
round-5/experiment-1/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
(+29 files in other folders)
