[project]
name = "gen-art-dataset-2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.15.0",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "country-converter==1.3.2",
    "dbnomics==1.2.7",
    "et-xmlfile==2.0.0",
    "idna==3.18",
    "loguru==0.7.3",
    "lxml==6.1.1",
    "numpy==2.4.6",
    "openpyxl==3.1.5",
    "pandas==3.0.3",
    "pycountry==26.2.16",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "requests==2.34.2",
    "six==1.17.0",
    "soupsieve==2.8.4",
    "tabulate==0.10.0",
    "tenacity==9.1.4",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
    "wbgapi==1.0.14",
    "xlrd==2.0.2",
]
