[project]
name = "gen-art-dataset-1"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==25.1.0",
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "attrs==26.1.0",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "country-converter==1.3.2",
    "et-xmlfile==2.0.0",
    "frozenlist==1.8.0",
    "idna==3.18",
    "loguru==0.7.3",
    "multidict==6.7.1",
    "numpy==2.4.6",
    "openpyxl==3.1.5",
    "pandas==3.0.3",
    "propcache==0.5.2",
    "pyarrow==24.0.0",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "requests==2.34.2",
    "six==1.17.0",
    "tabulate==0.10.0",
    "tqdm==4.68.1",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
    "wbgapi==1.0.14",
    "xlrd==2.0.2",
    "yarl==1.24.2",
]
