[project]
name = "gen-art-experiment-1"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.4.6",
    "pandas==3.0.3",
    "scipy==1.17.1",
    "statsmodels==0.14.6",
    "linearmodels==7.0",
    "matplotlib==3.10.9",
    "wbgapi==1.0.14",
    "requests==2.34.2",
    "loguru==0.7.3",
    "PyYAML==6.0.3",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.63.0",
    "formulaic==1.2.2",
    "idna==3.18",
    "interface_meta==2.0.1",
    "kiwisolver==1.5.0",
    "narwhals==2.22.1",
    "packaging==26.2",
    "patsy==1.0.2",
    "pillow==12.2.0",
    "pyhdfe==0.2.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "tabulate==0.10.0",
    "typing_extensions==4.15.0",
    "urllib3==2.7.0",
    "wrapt==2.2.1",
]
