[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gen-art-experiment-1"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas==3.0.3",
    "numpy==2.4.6",
    "scipy==1.17.1",
    "statsmodels==0.14.6",
    "loguru==0.7.3",
    "requests==2.34.2",
]
