[project]
name = "iter5-dd-corrected"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "loguru==0.7.3",
    "numpy==2.4.6",
    "pandas==3.0.3",
    "patsy==1.0.2",
    "psutil==7.2.2",
    "python-dateutil==2.9.0.post0",
    "scipy==1.17.1",
    "six==1.17.0",
    "statsmodels==0.14.6",
]
